<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.devtoledo.conversorbtc.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/quantidade_de_bitcoin" />

    <EditText
        android:id="@+id/edit_amount"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:digits="0123456789."
        android:hint="@string/quantidade"
        android:imeOptions="actionDone"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="17sp"
        android:text="@string/valor_em_dollar" />

    <TextView
        android:id="@+id/text_dollar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="23"
        android:textStyle="bold"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/valor_em_euro" />

    <TextView
        android:id="@+id/text_euro"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp" />

    <TextView
        android:layout_width="match_parent"
        android:textSize="17sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/valor_em_real" />

    <TextView
        android:id="@+id/text_real"
        android:layout_width="match_parent"
        android:textStyle="bold"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="351dp"
        android:layout_height="60dp"
        android:layout_marginTop="25dp"
        android:background="#3F51B4"
        android:text="@string/calcular"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</LinearLayout>
